# pydantic-cloud-secret

./: .pre-commit-config.yaml  README.md  pyproject.toml
pydanitc_cloud_secret/: __init__.py  base.py
pydanitc_cloud_secret/aws/: get_secret.py
tests/: test_aws_secret.py
